prevent sticky hover on mobile

--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -48,26 +48,6 @@ section {
           opacity: 0;
           transition: all 0.3s;
         }
-
-        // &:hover {
-        //   cursor: pointer;
-        //   box-shadow: 0 4px 3px -2px rgba(0, 0, 0, 0.3);
-        //   transform: translateY(-4px);
-
-        //   .item-image {
-        //     scale: 0.82;
-        //     transform: translateY(-24%);
-        //   }
-
-        //   .item-arrow {
-        //     opacity: 1;
-        //     rotate: 0deg;
-        //   }
-
-        //   & ~ .grid-item-title {
-        //     color: $red-hover;
-        //   }
-        // }
       }
 
       .grid-item-title {
@@ -85,27 +65,6 @@ section {
 @media (hover: hover) and (pointer: fine) {
   section .section-grid .grid-item .item:hover {
     cursor: pointer;
-    box-shadow: 0 4px 3px -2px rgba(0, 0, 0, 0.3);
-    transform: translateY(-4px);
-
-    .item-image {
-      scale: 0.82;
-      transform: translateY(-24%);
-    }
-
-    .item-arrow {
-      opacity: 1;
-      rotate: 0deg;
-    }
-
-    & ~ .grid-item-title {
-      color: $red-hover;
-    }
-  }
-}
-
-@media (hover: none) and (pointer: coarse) {
-  section .section-grid .grid-item .item:active {
     box-shadow: 0 4px 3px -2px rgba(0, 0, 0, 0.3);
     transform: translateY(-4px);
 
